Input: Fixed style on mobile webkit

--- a/src/components/Input.scss
+++ b/src/components/Input.scss
@@ -38,7 +38,7 @@ label {
 input {
     width: 100%;
     height: $ui-input-input-height;
-    padding-bottom: 5px;
+    padding: 0 0 5px;
 
     outline: 0;
     border: 0;
